--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^2.9.5",
 		"axios": "^0.27.2",
 		"firebase": "^9.8.4",
+		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.33.1",
 		"react-router-dom": "^6.3.0",
 		"styled-components": "^5.3.5",
-		"styled-normalize": "^8.0.7"
+		"styled-normalize": "^8.0.7",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.0",
