--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^2.9.5",
 		"axios": "^0.27.2",
+		"dotenv": "^16.0.1",
 		"firebase": "^9.8.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
@@ -24,6 +25,10 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@vitejs/plugin-react": "^1.3.0",
+		"react-error-overlay": "^6.0.9",
 		"vite": "^2.9.9"
+	},
+	"resolutions": {
+		"react-error-overlay": "6.0.9"
 	}
 }
