--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^18.0.0",
 		"react-hook-form": "^7.33.1",
 		"react-router-dom": "^6.3.0",
+		"react-toastify": "^9.0.5",
 		"styled-components": "^5.3.5",
 		"styled-normalize": "^8.0.7",
 		"yup": "^0.32.11"
