--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-hook-form": "^7.33.1",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.0.5",
+		"react-transition-group": "^4.4.2",
 		"styled-components": "^5.3.5",
 		"styled-normalize": "^8.0.7",
 		"yup": "^0.32.11"
